# rbeta

rbeta-cli/: .gitignore  ChangeLog.md  Main.hs  rbeta-cli.cabal  rbeta-cli.go
rbeta-cli/aws/: credentials.go
rbeta-cli/cmd/init/: init.go  remote-state-template.tf
rbeta-cli/cmd/reducer/: map.go
rbeta-cli/model/: naming.go
rbeta-cli/terraform/: terraform.go
rbeta-node/: .gitignore  README.md  index.js  mocha.opts  package.json  rbeta-reducer-bundle.js  rbeta_bundle.js  test-setup.js
rbeta-node/src/: create-table.tmplt.json  emit.js  emit.spec.js  events.js  events.spec.js  index.js  last-event.js  naming.js  schema.js  table-name.js  table-name.spec.js
rbeta-node/src/cli/: index.js
rbeta-node/src/commands/: command.js  command.spec.js  emit-event.js  emit-event.spec.js  emit.js  emit.spec.js  fetch-events.js  fetch-events.spec.js  fetch-last-reduction.js  index.js  reduce-events.js  reduce-events.spec.js  track-reduction.js  track-reduction.spec.js
rbeta-node/src/example/: index.js  rbetatest.js  reducer.js  webpack.config.js
rbeta-node/src/lib/: create-context.js  create-context.spec.js  create-tracking-table.tmplt.json  ddb-stream-proc-lambda.tmplt.js  ddb-stream-processor.js  emit.js  emit.spec.js  events.js  events.spec.js  group-ddb-events.spec.js  index.js  lambda-template.js  last-event.js  last-event.spec.js  last-reduced-event.js  rbeta.js  reduce-events.js  reducer-context.js  schema.js  table-name.js  table-name.spec.js  track.js  track.spec.js
rbeta-node/src/types/: group-name.js  (+12 more)
rbeta-node/test/: emit.spec.js  mocha.opts  test-setup.js
(+17 files in other folders)
