name: rbeta-cli
version: 0.1.0.0

synopsis: rbeta command line tool
description: rbeta command line tool
license: AllRightsReserved
license-file: LICENSE
author: sen.cenan@gmail.com
maintainer: sen.cenan@gmail.com
-- copyright:
category: Web
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10

executable rbeta-cli
   main-is: Main.hs
   -- other-modules:
   -- other-extensions:
   build-depends:
      base >=4.9 && <4.10,
      optparse-applicative == 0.13.2.0
   -- hs-source-dirs:
   default-language: Haskell2010
